[package]
name = "eval-metrics"
version = "0.1.0"
authors = ["benjarison"]
description = "Evaluation metric for machine learning"
keywords = ["evaluation metrics", "machine learning"]
homepage = "https://github.com/benjarison/eval-metrics"
repository = "https://github.com/benjarison/eval-metrics"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
assert_approx_eq = "1.1.0"
