[package]
name = "eval-metrics"
version = "0.1.0"
authors = ["Benjamin Harrison <benjamin.jt.harrison@gmail.com>"]
description = "Evaluation metrics for machine learning"
keywords = ["evaluation-metrics", "machine-learning"]
homepage = "https://github.com/benjarison/eval-metrics"
repository = "https://github.com/benjarison/eval-metrics"
documentation = "https://docs.rs/eval-metrics"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
assert_approx_eq = "1.1.0"
